feat: change /api/v1/entry to accept all parameters for requests to monday.com
